# ppi-report-generator

./: .editorconfig  .env.example  .gitignore  LICENSE  pyproject.toml
.github/workflows/: run-cron.yml
src/: main.py
src/services/: google_sheet_service.py  ppi_service.py  report_generator.py
